--- a/templates/profile.html
+++ b/templates/profile.html
@@ -155,6 +155,10 @@
 												<td class="right aligned">{{ humanize .playcount }}</td>
 											</tr>
 											<tr>
+												<td><b>{{ $global.T "Total Play Time" }}</b></td>
+												<td class="right aligned">{{ hhmm .play_time }}</td>
+											</tr>
+											<tr>
 												<td><b>{{ $global.T "Replays watched" }}</b></td>
 												<td class="right aligned">{{ humanize .replays_watched }}</td>
 											</tr>
