--- a/templates/profile.html
+++ b/templates/profile.html
@@ -94,7 +94,7 @@
 								</a>
 							{{ end }}
 							{{ if hasAdmin $global.Context.User.Privileges }}
-								<a href="https://old.ripple.moe/index.php?p=103&id={{ $global.UserID }}"
+								<a href="https://admin.kawata.pw/index.php?p=103&id={{ $global.UserID }}"
 									target="_blank" title="Quick edit" class="ui circular mini blue icon button">
 									<i class="folder open outline icon"></i>
 								</a>
@@ -113,8 +113,8 @@
 				<div class="ui three column divided stackable grid">
 					<div class="row">
 						<div class="column">
-							{{ $global.T "<b>%s</b> is a Ripple player from <b>%s</b>." .username (country .country true) | html }}
-							<br>{{ $global.T "They signed up on Ripple %s." (time $user.registered_on) | html }}
+							{{ $global.T "<b>%s</b> is a Kawata player from <b>%s</b>." .username (country .country true) | html }}
+							<br>{{ $global.T "They signed up on Kawata %s." (time $user.registered_on) | html }}
 							<br>{{ $global.T "Last seen: %s." (time $user.latest_activity) | html }}
 							<br>{{ with playstyle .play_style $global }}{{ $global.T "They play with %s." . }}{{ end }}
 						</div>
@@ -153,10 +153,6 @@
 											<tr>
 												<td><b>{{ $global.T "Playcount" }}</b></td>
 												<td class="right aligned">{{ humanize .playcount }}</td>
-											</tr>
-											<tr>
-												<td><b>{{ $global.T "Total Play Time" }}</b></td>
-												<td class="right aligned">{{ hhmm .play_time }}</td>
 											</tr>
 											<tr>
 												<td><b>{{ $global.T "Replays watched" }}</b></td>
