--- a/static/kawata.css
+++ b/static/kawata.css
@@ -13,7 +13,7 @@ body.ds .white.background {
 }
 
 body {
-    background: url("https://osu.ppy.sh/static/assets/background/bg-light.png");
+    background: url("https://kawata.pw/static/assets/background/bg-light.png");
 }
 
 .ui.vertical.menu {
