--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -16,6 +16,8 @@
 					{{ navbarItem .Path (.T "About") "/about" }}
 					{{ navbarItem .Path (.T "Rules") "/doc/rules" }}
 					{{ navbarItem .Path (.T "Documentation") "/doc" }}
+					<div class="divider"></div>
+					{{ navbarItem .Path (.T "Server Switcher") "/static/kawata-server-switcher.exe" }}
 				</div>
 			</div>
 			{{ if .Context.User.Username }}
