Fix admin stuff, re-add emojis

--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -48,7 +48,8 @@
 			</div>
 
 			{{ end }}
-			{{ navbarItem .Path (.T "Donate" | printf "<i class=\"red heart icon\"></i>%s") "/donate" }}
+			{{ navbarItem .Path (.T "" | printf "<i class=\"red heart icon\"></i>%s") "/donate" }}
+			{{ if $isAdmin }}{{ navbarItem .Path (.T "" | printf "<i class=\"blue shield alternate icon\"></i>%s") "https://old.kawata.pw" }}{{end}}
 		{{ end }}
 		<div class="firetrucking-right-menu">
 			<div class="item">
