--- a/static/kawata.css
+++ b/static/kawata.css
@@ -75,8 +75,8 @@ body {
 }
 
 .ui.card {
-    background: #131313;
-    box-shadow: 0 0 20px 7px black;
+    background: #f8f8f8;
+    box-shadow: 0 0 20px 7px rgb(255, 255, 255);
 }
 
 .huge.heading h1 {
